refactor greeting test

--- a/Assignment5/EventApp/test/EventApp.Tests/MainEvent.Tests.csproj
+++ b/Assignment5/EventApp/test/EventApp.Tests/MainEvent.Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\EventApp\EventApp.csproj" />
+    <ProjectReference Include="..\..\src\EventApp\MainEvent.csproj" />
   </ItemGroup>
 
 </Project>
